// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonClose component Should match snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn-0-2-1"
    type="button"
  />
</DocumentFragment>
`;

exports[`Test ButtonClose component Should match snapshot 2`] = `
<DocumentFragment>
  <button
    class="btn-0-2-2 test"
    type="submit"
  />
</DocumentFragment>
`;
